# django-consumption

./: .eslintrc.json  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .stylelintrc.json  CHANGELOG.md  LICENSE  Makefile  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci-default.yml  ci-release.yml
consumption/: __init__.py  admin.py  apps.py  urls.py
consumption/migrations/: 0001_initial.py  0002_resource.py  0003_record.py  0004_alter_record_options.py
consumption/models/: __init__.py  record.py  resource.py  subject.py
consumption/static/_src/sass/: style.scss
consumption/static/_src/sass/abstracts/: __abstracts-dir.scss  _colors.scss  _fonts.scss  _global_settings.scss
consumption/static/_src/sass/components/: __components-dir.scss  _actions-container.scss  _buttons.scss  _forms.scss  _object-list-table.scss
consumption/static/_src/sass/layout/: __layout-dir.scss  _app-specific.scss  _general.scss
consumption/static/consumption/: .gitignore  README
consumption/static/consumption/css/: README
consumption/static/consumption/js/: README
consumption/templates/consumption/: app_base.html  record_confirm_delete.html  record_create.html  record_detail.html  record_update.html  resource_confirm_delete.html  resource_create.html  resource_detail.html  resource_update.html  subject_confirm_delete.html  subject_create.html  subject_detail.html  subject_list.html  subject_update.html
consumption/templates/consumption/forms/: generic.html
consumption/views/: record.py  resource.py  subject.py
docs/source/: conf.py  index.rst
requirements/: common.txt
t3mpl4t3/: apps.py
tests/: __init__.py  runtests.py
tests/util/: __init__.py  settings_dev.py  settings_test.py  testcases.py  urls_dev.py  urls_test.py
